...
    <string name="role_bodyguard">bodyguard</string>
    <string name="role_customer">customer</string>
    <string name="role_none">none</string>
    <!-- /Tools -->

    <!-- Settings -->
    <string name="action_logout">Logout</string>
    <string name="success_logout">Successfully logged out!</string>
    <string name="can_not_logout">You are not logged in, so you can not logout!</string>
    <string name="action_settings">Settings</string>
    <string name="text_testtings">Settings are not created yet.</string>
    <!-- /Settings -->

...
    <string name="error_not_valid_2_25">Please enter a valid text, between 2 and 25 characters!</string>
    <string name="error_not_valid_5_50">Please enter a valid text, between 5 and 50 characters!</string>

    <!-- /Error -->

    <!-- APP -->
    <string name="app_name">TicketMachine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ticket Machine</string>
    <string name="nav_header_subtitle">ticket.machine@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="home_second">Home Second</string>
...

    <!--Navigation-->
    <string name="menu_home">Home</string>
    <string name="menu_events">Parties</string>
    <string name="menu_tickets">Tickets</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Login</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_scanner">Scanner</string>
    <string name="menu_events_manage">Manage Parties</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
...
    <string name="ticket_valid">Ticket valid</string>
    <string name="ticket_invalid">Invalid ticket</string>
    <!-- /Scanner-->

    <!-- Events Manage -->
    <string name="btn_text_delete">Delete</string>
    <string name="btn_text_add_event">Add event</string>
    <string name="text_view_first_header_events">List of active events</string>

    <string name="list_item_text_helper_price">Price: </string>
    <string name="list_item_text_helper_date_of_start">Event start: </string>
    <string name="list_item_text_helper_date_of_end">Event end: </string>
    <string name="toast_delete_success">The event has been successfully deleted</string>
...
    <string name="hint_text_event_description">Event description</string>
    <string name="hint_text_event_price">Event price</string>
    <string name="hint_date_time_event_date_of_start">Event start</string>
    <string name="hint_date_time_event_date_of_end">Event end</string>


    <string name="btn_date_time_of_start_event">Choose start</string>
    <string name="btn_date_time_of_end_event">Choose end</string>
    <string name="btn_text_btn_save_event">Save event</string>

    <string name="toast_add_event_success">Add event success!</string>
    <string name="toast_add_event_failure">Add event failure, provided data is incorrect!</string>
    <!-- /Events Manage Activity -->
</resources>

