<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/events_manage_add_image_view"
        android:contentDescription="@string/events_manage_add_image_view"
        app:srcCompat="@drawable/events_manage_add_event"
        android:layout_width="353dp"
        android:layout_height="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/event_name"
        android:inputType="text"
        android:hint="@string/hint_text_event_name"
        android:importantForAutofill="no"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/events_manage_add_image_view"/>

    <EditText
        android:id="@+id/event_description"
        android:inputType="text"
        android:hint="@string/hint_text_event_description"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name"/>

    <EditText
        android:id="@+id/event_price"
        android:inputType="numberDecimal"
        android:hint="@string/hint_text_event_price"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description"/>

    <EditText
        android:id="@+id/event_date_of_start"
        android:inputType="none"
        android:focusable="false"
        android:hint="@string/hint_date_time_event_date_of_start"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_price"/>

    <Button
        android:id="@+id/btn_date_time_of_start_event"
        android:text="@string/btn_date_time_of_start_event"
        android:importantForAutofill="no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_date_of_start"/>

    <EditText
        android:id="@+id/event_date_of_end"
        android:inputType="none"
        android:focusable="false"
        android:hint="@string/hint_date_time_event_date_of_end"
        android:importantForAutofill="no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_date_time_of_start_event"/>

    <Button
        android:id="@+id/btn_date_time_of_end_event"
        android:text="@string/btn_date_time_of_end_event"
        android:importantForAutofill="no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_date_of_end"/>

    <Button
        android:id="@+id/btn_save_event"
        android:text="@string/btn_text_btn_save_event"
        android:importantForAutofill="no"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_date_time_of_end_event" />

</androidx.constraintlayout.widget.ConstraintLayout>